pagination, truncatewords filter, some fixes were added

--- a/bboard/static/bboard/style.css
+++ b/bboard/static/bboard/style.css
@@ -38,8 +38,8 @@ nav a {
 				
 .product {
 	background-color: lightgrey;
-	height: 150px;
-	width: 45%;
-	margin: 5px 5px 5px 5px;
+	height: 200px;
+	width: 48%;
+	margin: 1% 0 0 1%;
 	float: left;
 }
